--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Download release asset
+      run: |
+          curl -L -o CloudXR-SDK_4_0_0.zip https://github.com/your-repo/your-project/releases/download/v1.0/CloudXR-SDK_4_0_0.zip
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
