--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,21 @@ jobs:
       run: |
         curl -L -o CloudXR-SDK_4_0_0.zip -H "Authorization: token $GITHUB_TOKEN" https://github.com/peted70/CloudXR-Clients/releases/download/SDK_4.0.0/CloudXR-SDK_4_0_0.zip
     
-    - name: Verify ZIP file download
+       # Check if the download was successful and verify the file size
+    - name: Verify download
       run: |
-        if [ ! -f "CloudXR-SDK_4_0_0.zip" ]; then echo "Download failed"; exit 1; fi
-        if [ $(stat -c%s "CloudXR-SDK_4_0_0.zip") -le 100 ]; then echo "Downloaded file is too small"; exit 1; fi
-    
+        if [ ! -f "CloudXR-SDK_4_0_0.zip" ]; then 
+          echo "Download failed"; 
+          exit 1; 
+        fi
+        
+        FILE_SIZE=$(stat -c%s "CloudXR-SDK_4_0_0.zip")
+        
+        if [ "$FILE_SIZE" -le 100 ]; then 
+          echo "Downloaded file is too small. Contents of the file:";
+          cat CloudXR-SDK_4_0_0.zip;
+          exit 1; 
+        fi
+        
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
