--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,9 +38,15 @@ jobs:
 
     - name: Download Release Asset
       run: |
-        curl -L -H "Authorization: token ${{ secrets.PAT }}" -o CloudXR-SDK_4_0_0.zip $ASSET_URL    
-       # Check if the download was successful and verify the file size
-    
+        # Download the asset using the extracted URL
+        curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PAT }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          -o CloudXR-SDK_4_0_0.zip \
+          $ASSET_URL       
+          
+    # Check if the download was successful and verify the file size
     - name: Verify download
       run: |
         if [ ! -f "CloudXR-SDK_4_0_0.zip" ]; then 
