--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,23 +1,24 @@
 {
-    "name": "Android Development Container",
-    "build": {
-      "dockerfile": "Dockerfile",
-      "context": ".."
-    },
-    "mounts": [
-      "source=/dev/bus/usb,target=/dev/bus/usb,type=bind"
-    ],
-    "runArgs": [
-      "--privileged"
-    ],
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "ms-vscode.cpptools",
-          "ms-azuretools.vscode-docker"
-        ]
-      }
-    },
-    "remoteUser": "vscode"
-  }
-  
+  "name": "Android Development Container",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": ".."
+  },
+  "mounts": [
+    "source=/dev/bus/usb,target=/dev/bus/usb,type=bind"
+  ],
+  "runArgs": [
+    "--privileged",
+    "--env-file",
+    ".env"
+  ],
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-vscode.cpptools",
+        "ms-azuretools.vscode-docker"
+      ]
+    }
+  },
+  "remoteUser": "vscode"
+}
