--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4            
     - name: Build the Docker image
-      run: docker build --build-arg GITHUB_TOKEN=${{ secrets.PAT }} . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build --build-arg GITHUB_TOKEN=${{ secrets.PAT }} . --file Dockerfile --tag --tag cloudxr-dev-env:latest
     # Run the command inside the Docker container to create the APK
     - name: Build APK
-      run: docker run --name my-container my-image-name:$(date +%s) bash -c "/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/gradlew build"
+      run: docker run --name my-container cloudxr-dev-env:latest bash -c "/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/gradlew build"
 
