--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,5 +19,8 @@ jobs:
     # Run the command inside the Docker container to create the APK
     - name: Build APK
       run: docker run --name my-container -w /CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR cloudxr-dev-env:latest bash -c "./gradlew build --info"
+    - name: Locate APK
+      run: docker run --name my-container cloudxr-dev-env:latest bash -c "find /CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/app/build/outputs/apk/ -name '*.apk'"
+
 
 
