--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,21 @@ jobs:
     # Run the command inside the Docker container to create the APK
     - name: Build APK
       run: docker run --name my-container -w /CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR cloudxr-dev-env:latest bash -c "./gradlew build"
-    - name: Locate APK
-      run: docker run --name my-container2 cloudxr-dev-env:latest bash -c "find / -name '*.apk'"
+    # Copy the APK file from the container to the host machine
+    - name: Copy APK to host
+      run: docker cp my-container:/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/app/build/outputs/apk/debug/app-debug.apk .
 
+    # Publish the APK as a GitHub Package
+    - name: Publish APK as GitHub Package
+      run: |
+        curl -X PUT \
+          -u ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} \
+          -H "Content-Type: application/vnd.android.package-archive" \
+          --data-binary "@app-debug.apk" \
+          "https://uploads.github.com/repos/${{ github.repository }}/packages/generic/cloudxr-apk/1.0.0/app-debug.apk?name=app-debug.apk"
+
+    # Cleanup the container
+    - name: Cleanup
+      run: docker rm my-container
 
 
