--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,14 +22,21 @@ jobs:
     # Copy the APK file from the container to the host machine
     - name: Copy APK to host
       run: docker cp my-container:/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/app/build/outputs/apk/debug/app-debug.apk .
+    - name: Copy Release APK to Host
+      run: docker cp my-container:/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/app/build/outputs/apk/release/app-release.apk .
 
     # Upload the APK as an artifact
     - name: Upload APK as Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
           name: app-debug-apk
           path: app-debug.apk
-
+    - name: Upload Release APK as Artifact
+      uses: actions/upload-artifact@v4
+      with:
+          name: app-release-apk
+          path: app-release.apk
+    
     # Cleanup the container
     - name: Cleanup
       run: docker rm my-container
