--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,15 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4            
     - name: Build the Docker image
-      run: docker build --build-arg GITHUB_TOKEN=${{ secrets.PAT }} --build-arg GITHUB_SDK_TOKEN=${{ secrets.SDK_TOKEN }} --build-arg SDK_REPO=${{ variables.SDK_REPO }}  --build-arg SDK_REPO_OWNER=${{ variables.SDK_REPO_OWNER }} . --file Dockerfile --tag cloudxr-dev-env:latest
+      run: docker build --build-arg GITHUB_SDK_TOKEN=${{ secrets.SDK_TOKEN }} --build-arg SDK_REPO=${{ variables.SDK_REPO }}  --build-arg SDK_REPO_OWNER=${{ variables.SDK_REPO_OWNER }} . --file Dockerfile --tag cloudxr-dev-env:latest
     # Run the command inside the Docker container to create the APK
     - name: Build APK
-      run: docker run --name my-container -w /CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR cloudxr-dev-env:latest bash -c "./gradlew build"
+      run: docker run --name my-container -w /CloudXR-SDK/Client/Sample/Android/OculusVR cloudxr-dev-env:latest bash -c "./gradlew build"
     # Copy the APK file from the container to the host machine
     - name: Copy APK to host
-      run: docker cp my-container:/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/app/build/outputs/apk/debug/app-debug.apk .
+      run: docker cp my-container:/CloudXR-SDK/Client/Sample/Android/OculusVR/app/build/outputs/apk/debug/app-debug.apk .
     - name: Copy Release APK to Host
-      run: docker cp my-container:/CloudXR-SDK_4_0_0/Client/Sample/Android/OculusVR/app/build/outputs/apk/release/app-release.apk .
+      run: docker cp my-container:/CloudXR-SDK/Client/Sample/Android/OculusVR/app/build/outputs/apk/release/app-release.apk .
 
     # Upload the APK as an artifact
     - name: Upload APK as Artifact
