--- a/.devcontainer/example.env
+++ b/.devcontainer/example.env
@@ -1,3 +1,3 @@
 GITHUB_SDK_TOKEN=<PAT token with read content access to the release on a Github repo with the NVidia CloudXR SDK set as the latest release>
-SDK_REPO=<The name of the repo which has the NVidia CloudXR SDK set as the latest release>
-SDK_REPO_OWNER=<The repo owner>
+GITHUB_SDK_REPO=<The name of the repo which has the NVidia CloudXR SDK set as the latest release>
+GITHUB_SDK_REPO_OWNER=<The repo owner>
