--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4            
     - name: Build the Docker image
-      run: docker build --build-arg GITHUB_SDK_TOKEN=${{ secrets.SDK_TOKEN }} --build-arg SDK_REPO=${{ env.SDK_REPO }}  --build-arg SDK_REPO_OWNER=${{ env.SDK_REPO_OWNER }} . --file Dockerfile --tag cloudxr-dev-env:latest
+      run: docker build --build-arg GITHUB_SDK_TOKEN=${{ secrets.SDK_TOKEN }} --build-arg SDK_REPO=${{ secrets.SDK_REPO }}  --build-arg SDK_REPO_OWNER=${{ secrets.SDK_REPO_OWNER }} . --file Dockerfile --tag cloudxr-dev-env:latest
     # Run the command inside the Docker container to create the APK
     - name: Build APK
       run: docker run --name my-container -w /CloudXR-SDK/Client/Sample/Android/OculusVR cloudxr-dev-env:latest bash -c "./gradlew build"
