--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,18 +26,46 @@ jobs:
       run: docker cp my-container:/CloudXR-SDK/Client/Sample/Android/OculusVR/app/build/outputs/apk/release/app-release.apk .
 
     # Upload the APK as an artifact
-    - name: Upload APK as Artifact
-      uses: actions/upload-artifact@v4
+    # - name: Upload APK as Artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #       name: app-debug-apk
+    #       path: app-debug.apk
+    # - name: Upload Release APK as Artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #       name: app-release-apk
+    #       path: app-release.apk
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       with:
-          name: app-debug-apk
-          path: app-debug.apk
-    - name: Upload Release APK as Artifact
-      uses: actions/upload-artifact@v4
+        tag_name: ${{ github.ref }}  # This uses the tag that triggered the workflow
+        release_name: Release ${{ github.ref }}
+        body: "Release of version ${{ github.ref }}"
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+    - name: Upload Debug APK as Release Asset
+      uses: actions/upload-release-asset@v1
       with:
-          name: app-release-apk
-          path: app-release.apk
-    
-    # Cleanup the container
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: app-debug.apk
+        asset_name: app-debug.apk
+        asset_content_type: application/vnd.android.package-archive
+
+    - name: Upload Release APK as Release Asset
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: app-release.apk
+        asset_name: app-release.apk
+        asset_content_type: application/vnd.android.package-archive          
+
+        # Cleanup the container
     - name: Cleanup
       run: docker rm my-container
 
