--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile",
 		"args": {
+			"GITHUB_TOKEN": "${env:GITHUB_TOKEN}",
 			"GITHUB_SDK_TOKEN": "${env:GITHUB_SDK_TOKEN}",
 			"SDK_REPO":"${env:GITHUB_SDK_REPO}",
 			"SDK_REPO_OWNER":"${env:GITHUB_SDK_REPO_OWNER}"
