--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: actions/create-release@v1.1.0
       with:
         tag_name: ${{ steps.create_tag.outputs.TAG_NAME }}  # Use the newly created tag
         release_name: Release ${{ steps.create_tag.outputs.TAG_NAME }}
@@ -60,13 +60,15 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Debug APK as Release Asset
-      uses: actions/upload-release-asset@v1
+      uses: actions/upload-release-asset@v2
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: app-debug.apk
         asset_name: app-debug.apk
         asset_content_type: application/vnd.android.package-archive
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
     - name: Upload Release APK as Release Asset
       uses: actions/upload-release-asset@v1
       with:
@@ -74,7 +76,9 @@ jobs:
         asset_path: app-release.apk
         asset_name: app-release.apk
         asset_content_type: application/vnd.android.package-archive          
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
         # Cleanup the container
     - name: Cleanup
       run: docker rm my-container
