--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,12 +8,13 @@
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile",
 		"args": {
-			"GITHUB_TOKEN": "${env:GITHUB_TOKEN}",
-			"GITHUB_SDK_TOKEN": "${env:GITHUB_SDK_TOKEN}",
-			"SDK_REPO":"${env:GITHUB_SDK_REPO}",
-			"SDK_REPO_OWNER":"${env:GITHUB_SDK_REPO_OWNER}"
+			"GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}",
+			"GITHUB_SDK_TOKEN": "${localEnv:GITHUB_SDK_TOKEN}",
+			"SDK_REPO":"${localEnv:GITHUB_SDK_REPO}",
+			"SDK_REPO_OWNER":"${localEnv:GITHUB_SDK_REPO_OWNER}"
 		}
 	}
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
